--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ main{
     margin: 0 auto;
     background-color: #fff;
     padding-left: 60px;
+    padding-bottom: 40px;
 }
 
 /*Buttons*/
@@ -74,10 +75,23 @@ h2{
     margin-top: 40px;
 }
 
+li{
+    margin: 15px 0px;
+}
+
 .check{
     color: #67c1ab;
+    border: 1px solid #67c1ab;
 }
 
 .cross{
     color: #eb5952;
+    border: 1px solid #eb5952;
 }
+
+.check_cross{
+    font-size: 10px;
+    border-radius: 50%;
+    padding: 3px;
+}
+
